force-app/main/default/objects/Historical_Data__c/Historical_Data__c.object-meta.xml
<CustomObject>
    <label>Historical Data</label>
    <nameField>
        <displayFormat>HData-{0000}</displayFormat>
        <label>Historical Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical_Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>