force-app/main/default/objects/Historical_Data__c/fields/Apprenticeship__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship__c</fullName>
    <label>Apprenticeship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>