force-app/main/default/objects/Historical_Data__c/fields/Black__c.field-meta.xml
<CustomField>
    <fullName>Black__c</fullName>
    <description>Historical Data students who identify as Black for ethnicity.</description>
    <label>Black</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>