force-app/main/default/objects/Historical_Data__c/fields/Earned_Tech_Job__c.field-meta.xml
<CustomField>
    <fullName>Earned_Tech_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Earned Tech Job?</label>
    <type>Checkbox</type>
</CustomField>