force-app/main/default/objects/Historical_Data__c/fields/Educational_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Educational_Attainment__c</fullName>
    <label>Educational Attainment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Have Not Completed HS</fullName>
            </value>
            <value>
                <fullName>Have Not Any Post-Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>