force-app/main/default/objects/Historical_Data__c/fields/Female__c.field-meta.xml
<CustomField>
    <fullName>Female__c</fullName>
    <description>Historical Data to account for the number of students who identify as Female.</description>
    <label>Female</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>