force-app/main/default/objects/Historical_Data__c/fields/First_Generation__c.field-meta.xml
<CustomField>
    <fullName>First_Generation__c</fullName>
    <description>Historical Data students who were First Generation.</description>
    <label>First Generation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>