force-app/main/default/objects/Historical_Data__c/fields/Formerly_Incarcerated_Re_entry__c.field-meta.xml
<CustomField>
    <fullName>Formerly_Incarcerated_Re_entry__c</fullName>
    <description>Historical Data students how were Formerly Incarcerated / Re-entry.</description>
    <label>Formerly Incarcerated / Re-entry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>