force-app/main/default/objects/Historical_Data__c/fields/Gender_Sexuality__c.field-meta.xml
<CustomField>
    <fullName>Gender_Sexuality__c</fullName>
    <label>Gender &amp; Sexuality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Transgender</fullName>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
            </value>
            <value>
                <fullName>LGBTQ+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>