force-app/main/default/objects/Historical_Data__c/fields/Have_Not_Any_Post_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Have_Not_Any_Post_Secondary__c</fullName>
    <description>Historical Data of students who have not any Post Secondary.</description>
    <label>Have Not Any Post-Secondary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>