force-app/main/default/objects/Historical_Data__c/fields/Have_Not_Completed_High_School__c.field-meta.xml
<CustomField>
    <fullName>Have_Not_Completed_High_School__c</fullName>
    <description>Historical Data of students who have not completed High School.</description>
    <label>Have Not Completed High School</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>