force-app/main/default/objects/Historical_Data__c/fields/Have_Not_Completed_HS__c.field-meta.xml
<CustomField>
    <fullName>Have_Not_Completed_HS__c</fullName>
    <label>Have Not Completed HS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>