force-app/main/default/objects/Historical_Data__c/fields/Latinx__c.field-meta.xml
<CustomField>
    <fullName>Latinx__c</fullName>
    <description>Historical Data students who identify as Latinx for ethnicity.</description>
    <label>Latinx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>