force-app/main/default/objects/Historical_Data__c/fields/LGBTQ__c.field-meta.xml
<CustomField>
    <fullName>LGBTQ__c</fullName>
    <description>Historical Data to account for the number of students who identify as LGBTQ+.</description>
    <label>LGBTQ+</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>