force-app/main/default/objects/Historical_Data__c/fields/Male__c.field-meta.xml
<CustomField>
    <fullName>Male__c</fullName>
    <description>Historical Data to account for the number of students who identify as Male.</description>
    <label>Male</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>