force-app/main/default/objects/Historical_Data__c/fields/Non_Binary__c.field-meta.xml
<CustomField>
    <fullName>Non_Binary__c</fullName>
    <description>Historical Data to account for the number of students who identify as Non-Binary.</description>
    <label>Non-Binary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>