force-app/main/default/objects/Historical_Data__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Formerly Incarcerated / Re-entry</fullName>
            </value>
            <value>
                <fullName>Undocumented</fullName>
            </value>
            <value>
                <fullName>First Generation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>