force-app/main/default/objects/Historical_Data__c/fields/Other_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Other_Ethnicity__c</fullName>
    <description>Historical Data students who identify as Other for Ethnicity.</description>
    <label>Other Ethnicity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>