force-app/main/default/objects/Historical_Data__c/fields/Outcome_Earned_Tech_Job__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Earned_Tech_Job__c</fullName>
    <description>Historical Data students who earned tech jobs.</description>
    <label>Outcome Earned Tech Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>