force-app/main/default/objects/Historical_Data__c/fields/Pre_Apprenticeship__c.field-meta.xml
<CustomField>
    <fullName>Pre_Apprenticeship__c</fullName>
    <label>Pre-Apprenticeship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>