force-app/main/default/objects/Historical_Data__c/fields/Self_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation__c</fullName>
    <label>Self-Evaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>