force-app/main/default/objects/Historical_Data__c/fields/Southeast_Asian__c.field-meta.xml
<CustomField>
    <fullName>Southeast_Asian__c</fullName>
    <description>Historical Data students who identify as Southeast Asian for ethnicity.</description>
    <label>Southeast Asian</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>