force-app/main/default/objects/Historical_Data__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Historical_Data</relationshipLabel>
    <relationshipName>Historical_Data</relationshipName>
    <type>Lookup</type>
</CustomField>