force-app/main/default/objects/Historical_Data__c/fields/Transgender__c.field-meta.xml
<CustomField>
    <fullName>Transgender__c</fullName>
    <description>Historical Data to account for the number of students who identify as Transgender&gt;</description>
    <label>Transgender</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>