force-app/main/default/objects/Historical_Data__c/fields/Undocumented__c.field-meta.xml
<CustomField>
    <fullName>Undocumented__c</fullName>
    <description>Historical Data students who were Undocumented.</description>
    <label>Undocumented</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>