force-app/main/default/objects/Historical_Data__c/fields/Veteran__c.field-meta.xml
<CustomField>
    <fullName>Veteran__c</fullName>
    <description>Historical Data students who are Veterans.</description>
    <label>Veteran</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>