force-app/main/default/objects/Historical_Data__c/fields/White__c.field-meta.xml
<CustomField>
    <fullName>White__c</fullName>
    <description>Historical Data students who identify as White for ethnicity.</description>
    <label>White</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>