force-app/main/default/objects/Historical_Data__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Created by: YB,MH</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>