force-app/main/default/objects/Historical_Data__c/recordTypes/WFT_Historical_Registrations.recordType-meta.xml
<RecordType>
    <fullName>WFT_Historical_Registrations</fullName>
    <active>true</active>
    <label>WFT Historical Registrations</label>
</RecordType>