force-app/main/default/objects/Historical_Data__c/recordTypes/WFT_Student_Census.recordType-meta.xml
<RecordType>
    <fullName>WFT_Student_Census</fullName>
    <active>true</active>
    <label>WFT Student Census</label>
</RecordType>