force-app/main/default/objects/Historical_Data__c/listViews/All_Historical_Data.listView-meta.xml
<ListView>
    <fullName>All_Historical_Data</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Year__c</columns>
    <columns>Self_Evaluation__c</columns>
    <columns>Pre_Apprenticeship__c</columns>
    <columns>Apprenticeship__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Historical_Data__c.WFT_Historical_Registrations</value>
    </filters>
    <label>All Historical Data</label>
    <sharedTo>
        <group>BW_Executive_Team</group>
        <group>SF_Admin_Team</group>
        <group>VP_Team</group>
    </sharedTo>
</ListView>