force-app/main/default/objects/Historical_Data__c/listViews/Student_Census.listView-meta.xml
<ListView>
    <fullName>Student_Census</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Historical_Data__c.WFT_Student_Census</value>
    </filters>
    <label>Student Census</label>
    <sharedTo>
        <group>BW_Executive_Team</group>
        <group>SF_Admin_Team</group>
        <group>VP_Team</group>
    </sharedTo>
</ListView>